#1234 - Update dependencies to recent latest version